# rfid-backend

./: Cargo.toml  README.md  api.md  test.py
entity/: Cargo.toml
entity/src/: accounts.rs  inventory_event.rs  items.rs  lib.rs  prelude.rs  residents.rs  timestamps.rs  transaction_items.rs  transactions.rs  users.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.tsx
frontend/src/api/: api.ts  getLocations.tsx
frontend/src/components/: AddItem.tsx  AddPhoto.tsx  AddResident.tsx  DatePicker.tsx  EditLocation.tsx  EditResident.tsx  Items.tsx  LocationsDropdown.tsx  LocationsTable.tsx  Navbar.tsx  NewLocation.tsx  ResidentTable.tsx  Scanner.ts  TransactionHistoryTable.tsx  UpdateInventory.tsx
frontend/src/models/: AccountsTable.tsx  models.ts
frontend/src/routes/: Accounts.tsx  ActiveScan.tsx  Admin.tsx  Annex.tsx  Login.tsx  Monitor.tsx  Reports.tsx  monitor.tsx
migration/src/: lib.rs  m20231210_134627_residents.rs  m20231210_134639_timestamps.rs  m20231213_132412_seed_locations.rs  m20231213_162420_seed_test_data.rs  m20240224_203835_accounts.rs  m20240224_231812_transactions.rs  m20240225_161903_users.rs  m20240227_010532_items.rs  m20240227_021210_transaction_items.rs  m20240227_173940_add_inventory.rs  m20240305_024157_seed_accounts_transactions.rs  m20240305_030602_seed_transactions.rs  m20240305_132005_seed_transaction_items.rs
seed_data/: locations.json  residents.json  timestamps.json  transaction_items.json
src/: app_config.rs  lib.rs  main.rs
src/controllers/: accounts_controller.rs  auth_controller.rs  items_controller.rs  locations_controller.rs  mod.rs  order_controller.rs  residents_controller.rs  timestamps_controller.rs  user_controller.rs
src/middleware/: auth.rs
src/models/: residents.rs  response.rs
testapi/: api.md
testapi/src/: lib.rs
