[package]
name = "scan_mvcf"
version = "0.1.0"
authors = ["PThorpe92 <preston@unlockedlabs.org>"]
license = "MIT"
edition = "2021"

[workspace]
members = [".", "entity", "migration", "testapi"]


[dependencies]
serde_json = { version = "1.0.109", features = ["std"] }
serde = { version = "1.0.193", features = ["derive"] }
dirs = "5.0.1"
once_cell = "1.19.0"
chrono = "0.4.31"
actix = "0.13.1"
actix-web = { version = "4.4.1", features = ["http2", "macros"] }
env_logger = "0.10.1"
log = "0.4.20"
futures-util = "0.3.30"
serde_with = "3.4.0"
reqwest = "0.11.23"
actix-cors = "0.6.5"
sqlx-postgres = "0.7.3"
actix-session = "0.8.0"
sea-orm = { version = "0.12.10", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-json",
  "with-chrono",
] }
entity = { path = "entity" }
migration = { path = "migration" }
testapi = { path = "testapi" }
dotenvy = "0.15.7"
actix-multipart = { version = "0.6.1", features = ["tempfile"] }
