[package]
name = "scan_mvcf"
version = "0.1.0"
authors = ["PThorpe92 <preston@unlockedlabs.org>"]
license = "MIT"
edition = "2021"

[workspace]
members = [".", "entity", "migration", "testapi"]


[dependencies]
serde_json = { version = "1.0.114", features = ["std"] }
serde = { version = "1.0.197", features = ["derive"] }
dirs = "5.0.1"
once_cell = "1.19.0"
chrono = "0.4.34"
actix = "0.13.3"
actix-web = { version = "4.5.1", features = ["http2", "macros"] }
env_logger = "0.11.2"
log = "0.4.20"
futures-util = "0.3.30"
serde_with = "3.6.1"
reqwest = "0.11.24"
actix-cors = "0.6.5"
sqlx-postgres = "0.7.3"
jsonwebtoken = "9.2.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-service = "2.0.2"
dotenvy = "0.15.7"
actix-multipart = { version = "0.6.1", features = ["tempfile"] }
sea-orm = { version = "0.12.14", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-json",
  "with-chrono",
] }
entity = { path = "entity" }
migration = { path = "migration" }
testapi = { path = "testapi" }
futures = "0.3.30"
